--- a/.github/workflows/send_whatsapp.yml
+++ b/.github/workflows/send_whatsapp.yml
@@ -2,8 +2,8 @@
 name: Send Tesla Price on WhatsApp
 
 on:
-  schedule:
-    - cron: '0 14 * * *'  # UTC 17:00 Israel Time
+  # schedule:
+    # - cron: '0 14 * * *'  # UTC 17:00 Israel Time
   workflow_dispatch:      # Optional: run manually from GitHub UI
 
 jobs:
