--- a/.github/workflows/send_whatsapp.yml
+++ b/.github/workflows/send_whatsapp.yml
@@ -1,9 +1,8 @@
-# Trigger workflow to appear in GitHub Actions
 name: Send Tesla Price on WhatsApp
 
 on:
-  # schedule:
-    # - cron: '0 14 * * *'  # UTC 17:00 Israel Time
+  schedule:
+    - cron: '0 14 * * *'  # UTC 17:00 Israel Time
   workflow_dispatch:      # Optional: run manually from GitHub UI
 
 jobs:
