--- a/.github/workflows/send_whatsapp.yml
+++ b/.github/workflows/send_whatsapp.yml
@@ -22,6 +22,16 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+          - name: Debug ENV
+
+      - name: Debug ENV
+        env:
+          TWILIO_SID: ${{ secrets.TWILIO_SID }}
+          MY_WHATSAPP: ${{ secrets.MY_WHATSAPP }}
+        run: |
+          echo "TWILIO SID starts with: ${TWILIO_SID:0:6}"
+          echo "MY_WHATSAPP is: ${MY_WHATSAPP}"
+
       - name: Run script
         env:
           TWILIO_SID: ${{ secrets.TWILIO_SID }}
